--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg" href="./src/assets/logo.svg" />
-    <title>Demo Playground</title>
+    <link rel="icon" type="image/svg" href="/assets/logo.5dc9d60c.svg" />
+    <title>Element Plus Playground</title>
     <script>
       // process shim for old versions of @vue/compiler-sfc dependency
       window.process = { env: {} }
     </script>
-    <script type="module" src="./src/main.ts"></script>
+    
+    <script type="module" crossorigin src="/assets/index.eb026a4a.js"></script>
+    <link rel="stylesheet" href="/assets/index.30b63fbd.css">
   </head>
   <body>
     <div id="app"></div>
